--- a/Actividad2.html
+++ b/Actividad2.html
@@ -377,8 +377,8 @@ aleatorio.</p>
 <div id="probabilidad-teórica" class="section level3">
 <h3>Probabilidad Teórica:</h3>
 <p>Para el calculo de la probabilidad teótica nos informan que la
-probabilidad de que pasados 5 años, un componente falle es de 0.1 es
-decir <span class="math inline">\(P(X = 1) = 0.1\)</span> , y como nos
+probabilidad de que pasados 5 años, un componente falle es de 0.1, es
+decir, <span class="math inline">\(P(X = 1) = 0.1\)</span> , y como nos
 dicen que el tiempo de vida de cada componente es independiente cada
 otro, podemos calcular <span class="math inline">\(P(X = 3)\)</span> de
 la siguiente manera:</p>
