MOD: Ajustes de ortografia.

--- a/Actividad2.html
+++ b/Actividad2.html
@@ -13,7 +13,7 @@
 
 <meta name="date" content="2024-03-16" />
 
-<title>Solución Actividad 2 Propabiliad y Estadística</title>
+<title>Solución Actividad 2 Probabiliad y Estadística</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,7 +350,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Solución Actividad 2 Propabiliad y
+<h1 class="title toc-ignore">Solución Actividad 2 Probabiliad y
 Estadística</h1>
 <h4 class="author">Alejandro Sarmiento Rivera y Juan Esteban Becerra
 Gutiérrez</h4>
@@ -376,7 +376,7 @@ representa el número de veces que se repite el experimento
 aleatorio.</p>
 <div id="probabilidad-teórica" class="section level3">
 <h3>Probabilidad Teórica:</h3>
-<p>Para el calculo de la probabilidad teótica nos informan que la
+<p>Para el calculo de la probabilidad teórica, nos informan que la
 probabilidad de que pasados 5 años, un componente falle es de 0.1, es
 decir, <span class="math inline">\(P(X = 1) = 0.1\)</span> , y como nos
 dicen que el tiempo de vida de cada componente es independiente cada
@@ -387,7 +387,7 @@ la siguiente manera:</p>
 <p><span class="math inline">\(P(X = 3) = (0.1) \times (0.1) \times
 (0.1)\)</span></p>
 <p><span class="math inline">\(P(X = 3) = 0.001\)</span></p>
-<p>En conclusión la probabilidad teórica de que al seleccionar 3
+<p>En conclusión, la probabilidad teórica de que al seleccionar 3
 componentes presenten fallas pasados 5 años es de 0.001.</p>
 </div>
 <div id="parámetros-iniciales" class="section level3">
